Added corrected icons for email and phone (added to repository for posterity, will be added to font awesome), also updated subnav to be in same mobile position since it was recently updated to stay collapsed until 1200px wide, corrected issue with ecosystem-home-hero--no-image hero where breadcrumbs were not correct color

--- a/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
+++ b/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
@@ -223,6 +223,19 @@
     .iastate22-button-set {
       margin-bottom: 0;
     }
+    // breadcrumb color
+    .iastate22-breadcrumb {
+      .iastate22-breadcrumb__list {
+        li {
+          a {
+            color: $white;
+          }
+          &:after {
+            border-color: $white;
+          }
+        }
+      }
+    }
   }
 
   .ecosystem-home-hero--supporting-image & {
