--- a/src/components/hero/_hero.scss
+++ b/src/components/hero/_hero.scss
@@ -3,6 +3,8 @@
   position: relative;
   @include media-breakpoint-up(lg) {
     padding-top: rem(40);
+  }
+  @include media-breakpoint-up(xl) {
     margin-bottom: 0;
   }
   &.hero--top-level-lp {
@@ -14,7 +16,7 @@
   }
   &.hero--no-media,
   &.hero--top-level-lp--no-media {
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       margin-bottom: rem(40);
     }
   }
@@ -82,7 +84,7 @@
   z-index: 2;
   max-width: rem(342);
   position: absolute;
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     top: 0;
     right: rem(-70);
     left: initial;
