Edits to the person profile pages and new components and pages for the news hub, and articles

--- a/src/components/card-set/card-set.twig
+++ b/src/components/card-set/card-set.twig
@@ -1,4 +1,4 @@
-<div class="card-set{% if teaser_news %} card-set--teaser{% elseif teaser_profile %} card-set--teaser{% endif %}">
+<div class="card-set{% if teaser_news %} card-set--teaser{% elseif teaser_profile %} card-set--teaser {% elseif teaser_profile %} card-set--teaser{% endif %}">
   <ul>
     {% for card in cards %}
       {% if with_modal %}
@@ -7,6 +7,10 @@
         <li>{% include "@card--teaser-news" with card %}</li>
       {% elseif teaser_profile %}
         <li>{% include "@card--teaser-profile" with card %}</li>
+      {% elseif recent_articles %}
+        <li>{% include "@card--recent-article" with card %}</li>
+      {% elseif news_articles %}
+        <li>{% include "@card--news-article" with card %}</li>
       {% else %}
         <li>{% include "@card" with card %}</li>
       {% endif %}
