--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -24,6 +24,11 @@
       flex-wrap: wrap;
     }
   }
+  &.iastate22-card--news-article {
+    gap: rem(35);
+    display: flex;
+    box-shadow: none;
+  }
   &.clickable {
     cursor: pointer;
     &:hover {
@@ -162,6 +167,51 @@
       padding: rem(23);
     }
   }
+  .iastate22-card--recent-article &,
+  .iastate22-card--news-article & {
+    text-align: left;
+    .iastate22-card__content-tags {
+      ul {
+        margin: 0;
+        li {
+          color: $iastate-red;
+          font-size: rem(18);
+          font-weight: 600;
+          display: inline;
+          padding-right: rem(15);
+        }
+      }
+    }
+    .iastate22-card__title {
+      margin: 0;
+      padding: 0;
+      .iastate22-link-secondary {
+        font-size: rem(22);
+        color: $iastate-maroon;
+      }
+    }
+  }
+  .iastate22-card--news-article & {
+    border-left: solid rem(2) #f1be48;
+  }
+  .iastate22-card__date,
+  .iastate22-card__content-date {
+    font-style: italic;
+    margin: 0;
+    color: $grey;
+  }
+  .iastate22-card--news-article & {
+    text-align: left;
+  }
+}
+
+.recent-articles {
+  .card-set {
+    margin: rem(50) 0;
+    &:after {
+      background-color: $white;
+    }
+  }
 }
 
 .iastate22-card__media {
@@ -182,7 +232,8 @@
       padding-top: 94.67%;
     }
   }
-  .iastate22-card--teaser & {
+  .iastate22-card--teaser &,
+  .iastate22-card--news-article & {
     @include media-breakpoint-up(sm) {
       flex: 0 1 auto;
       width: 50%;
@@ -202,7 +253,6 @@
       padding-top: 100%;
     }
   }
-
   img {
     transition: 0.2s transform ease-in-out;
   }
