--- a/src/components/pages/faculty-staff-directory-general-search.twig
+++ b/src/components/pages/faculty-staff-directory-general-search.twig
@@ -38,6 +38,7 @@
             </button>
           </div>
         </form>
+        <p class="filter-form-results">About 344 Results &bull; <a href="#">Reset</a></p>
       </div>
     </div>
   </div>
