--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -38,6 +38,7 @@
 @import "../components/hero/hero";
 @import "../components/feature-with-large-image/feature-with-large-image";
 @import "../components/feature/feature";
+@import "../components/featured-news/featured-news";
 @import "../components/feature-with-large-image-and-intro/feature-with-large-image-and-intro";
 @import "../components/external-news-story/external-news-story";
 @import "../components/video-embed/video-embed";
@@ -65,10 +66,14 @@
 @import "../components/ecosystem-home-hero/ecosystem-home-hero";
 @import "../components/personal-profile-info-card/personal-profile-info-card";
 @import "../components/privacy-consent/privacy-consent";
+@import "../components/news-item/news-item";
+@import "../components/share/share";
 @import "../components/faculty-staff-card/faculty-staff-card";
 @import "../components/faculty-staff-card-set/faculty-staff-card-set";
 @import "../components/faculty-staff-feed-item/faculty-staff-feed-item";
 @import "../components/faculty-staff-feed-item-set/faculty-staff-feed-item-set";
+@import "../components/hero-stories-feed-item/hero-stories-feed-item";
+@import "../components/stater-article-hero/stater-article-hero";
 
 // Pages
 @import "../components/pages/home";
@@ -76,3 +81,4 @@
 @import "../components/pages/additional-pages";
 @import "../components/pages/college-template";
 @import "../components/pages/faculty-staff-directory";
+@import "../components/pages/article-pages";
