--- a/src/components/pages/news-hub.twig
+++ b/src/components/pages/news-hub.twig
@@ -5,12 +5,35 @@
 {% endblock %}
 
 {% block content %}
-<div class="outer-pad">
-  <div class="faculty-staff-directory-header">
-  {% include "@ecosystem-home-hero--no-image" %}
-  
+  <div class="outer-pad">
+    {% include "@hero" with hero %}
+
+    {% include "@featured-news" with featured_news %}
+
+    <div class="recent-articles">
+      <div class="text-content">
+        <h2>Recent Articles</h2>
+      </div>
+      {% include "@card-set" with recent_articles %}
+    </div>
+
+    <div class="paragraph-widget paragraph-widget--news-items">
+      <div class="text-content">
+        <h2>In The News</h2>
+      </div>
+      <div class="news-items">
+        <div class="news-item">
+          {% include "@news-item" with article1 %}
+        </div>
+        <div class="news-item">
+          {% include "@news-item" with article2 %}
+        </div>
+      </div>
+    </div>
+
     <div class="paragraph-widget paragraph-widget--filter-form">
       <div class="filter-form">
+        <h2 class="filter-form__label">All Stories</h2>
         <form class="iastate22-form iastate22-form--inline" id="InlineForm" action="#" method="post">
           <div class="form-item">
             <label for="name">Search</label>
@@ -40,30 +63,17 @@
         <p class="filter-form-results">About 344 Results &bull; <a href="#">Reset</a></p>
       </div>
     </div>
-  </div>
 
-  <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
-    {% include "@faculty-staff-card-set" with faculty_staff_items %}
-  </div>
+    <div class="paragraph-widget paragraph-widget--hero-stories-feed-item-set">
+        {% include "@hero-stories-feed-item-set" with news_articles %}
+    </div>
 
-  <div class="text-content">
-    <h2>Category</h2>
+    <div class="paragraph-widget paragraph-widget--pagination">
+      {% include "@pagination" %}
+    </div>
   </div>
-
-  <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
-    {% include "@faculty-staff-card-set" with faculty_staff_items2 %}
-  </div>
-
-  <div class="text-content">
-    <h2>Category 2</h2>
-  </div>
-
-  <div class="paragraph-widget paragraph-widget--faculty-staff-card-set">
-    {% include "@faculty-staff-card-set" with faculty_staff_items3 %}
-  </div>
-  
-</div>
 {% endblock %}
+
 
 {% block footer %}
   {% include "@site-footer--ecosystem" %}
