--- a/src/components/card/card--recent-article.twig
+++ b/src/components/card/card--recent-article.twig
@@ -6,9 +6,9 @@
   {% endif %}
   <div class="iastate22-card__content">
     <div class="iastate22-card__content-tags">
-      <ul>
+      <ul class="iastate22-card__content-tags__list">
         {% for item in tags %}
-          <li>{{ item }}</li>
+          <li class="iastate22-card__content-tags__list-item">{{ item }}</li>
         {% endfor %}
       </ul>
     </div>
