--- a/src/components/pages/article.twig
+++ b/src/components/pages/article.twig
@@ -12,7 +12,7 @@
     <div class="paragraph-widget paragraph-widget--text-content">
       <div class="text-content">
         <h2>Community Is About Belonging</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum lorem sed risus ultricies tristique nulla aliquet. Sem et tortor consequat id porta nibh venenatis. Bibendum enim facilisis gravida neque. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Dui nunc mattis enim ut. Faucibus et molestie ac feugiat sed. Mauris a diam maecenas sed enim. Aliquet lectus proin nibh nisl condimentum id venenatis a. Tellus in metus vulputate eu scelerisque. Consectetur adipiscing elit duis tristique sollicitudin. Malesuada nunc vel risus commodo viverra maecenas. Consectetur purus ut faucibus pulvinar elementum integer enim neque volutpat. Risus sed vulputate odio ut. Leo in vitae turpis massa sed elementum tempus egestas sed.</p>
+        <p class="article-overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum lorem sed risus ultricies tristique nulla aliquet. Sem et tortor consequat id porta nibh venenatis. Bibendum enim facilisis gravida neque. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Dui nunc mattis enim ut. Faucibus et molestie ac feugiat sed. Mauris a diam maecenas sed enim. Aliquet lectus proin nibh nisl condimentum id venenatis a. Tellus in metus vulputate eu scelerisque. Consectetur adipiscing elit duis tristique sollicitudin. Malesuada nunc vel risus commodo viverra maecenas. Consectetur purus ut faucibus pulvinar elementum integer enim neque volutpat. Risus sed vulputate odio ut. Leo in vitae turpis massa sed elementum tempus egestas sed.</p>
       </div>
     </div>
 
@@ -32,8 +32,7 @@
 
     
     
-    <div class="paragraph-widget paragraph-widget--category-tags">
-      <div class="text-content">
+    <div class="paragraph-widget paragraph-widget--article-category-tags">
         <h4 class="category-title">Category 1</h4>
         <ul class="category-tags">
           <li><a href="#">Tag Name 1</a></li>
@@ -52,7 +51,6 @@
           <li><a href="#">Tag Name 8 Lorem Ipsum</a></li>
         </ul>
       </div>
-    </div>
   </div>
 {% endblock %}
 
