--- a/src/components/pages/news-hub--no-hero-text-feature.twig
+++ b/src/components/pages/news-hub--no-hero-text-feature.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="outer-pad">
+  <div class="outer-pad news-hub">
     {% include "@hero" with hero %}
 
     {% include "@featured-news" with featured_news %}
