--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -82,3 +82,4 @@
 @import "../components/pages/college-template";
 @import "../components/pages/faculty-staff-directory";
 @import "../components/pages/article-pages";
+@import "../components/pages/news-hub";
