--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -585,11 +585,28 @@
     &:before {
       display: none;
     }
+    // set image ratio for tablet and up
+    .iastate22-card__media {
+      &:before {
+        padding-top: 86.47%;
+        @include media-breakpoint-up(md) {
+          padding-top: 71.47%;
+        }
+      }
+    }
     &:nth-child(2),
     &:last-child {
       @include media-breakpoint-up(md) {
         width: calc(50% - #{rem(5)});
         margin-bottom: 0;
+      }
+      // set image ratio for tablet and up
+      .iastate22-card__media {
+        &:before {
+          @include media-breakpoint-up(md) {
+            padding-top: 85.95%;
+          }
+        }
       }
       .iastate22-card__cta {
         @include media-breakpoint-up(lg) {
@@ -603,6 +620,10 @@
           width: auto;
           padding-top: rem(31);
           padding-bottom: rem(31);
+        }
+        .arrow {
+          inset: auto;
+          transform: translate(#{rem(13)}, #{rem(13)});
         }
       }
     }
