--- a/src/components/featured-news/_featured-news.scss
+++ b/src/components/featured-news/_featured-news.scss
@@ -15,7 +15,13 @@
     .featured-news__large-article {
       padding-right: 0;
       border-right: none;
+      padding-bottom: rem(50);
+      margin-bottom: rem(50);
+      border-bottom: solid rem(3) $light-grey;
       @include media-breakpoint-up(lg) {
+        padding-bottom: 0;
+        margin-bottom: 0;
+        border-bottom: none;
         padding-right: rem(50);
         border-right: solid rem(3) $light-grey;
       }
@@ -75,8 +81,10 @@
         .featured-news__large-article__title {
           margin: 0;
           padding: 0;
+          line-height: rem(16);
           .iastate22-link-secondary {
             font-size: rem(22);
+            margin-top: 0;
           }
         }
         .featured-news__large-article__excerpt {
@@ -97,7 +105,7 @@
         padding-right: rem(50);
       }
       .featured-news__small-article__container {
-        margin-bottom: rem(25);
+        margin-bottom: rem(35);
         &:last-child {
           margin-bottom: 0;
         }
@@ -138,6 +146,7 @@
         .featured-news__small-article__title {
           margin: 0;
           padding: 0;
+          line-height: rem(16);
           .iastate22-link-secondary {
             font-size: rem(22);
             margin: 0;
