Dev in progress. fullcalendar template theming / detail page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -74,6 +74,7 @@
 @import "../components/faculty-staff-feed-item-set/faculty-staff-feed-item-set";
 @import "../components/hero-stories-feed-item/hero-stories-feed-item";
 @import "../components/stater-article-hero/stater-article-hero";
+@import "components/calendar";
 
 // Pages
 @import "../components/pages/home";
