--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -36,9 +36,11 @@
 @import "../components/card/card";
 @import "../components/card-set/card-set";
 @import "../components/hero/hero";
+@import "../components/event-details/event";
 @import "../components/feature-with-large-image/feature-with-large-image";
 @import "../components/feature/feature";
 @import "../components/featured-news/featured-news";
+@import "../components/featured-events/featured-events";
 @import "../components/feature-with-large-image-and-intro/feature-with-large-image-and-intro";
 @import "../components/external-news-story/external-news-story";
 @import "../components/video-embed/video-embed";
@@ -68,6 +70,7 @@
 @import "../components/privacy-consent/privacy-consent";
 @import "../components/news-item/news-item";
 @import "../components/share/share";
+@import "../components/upcoming-events/upcoming-events";
 @import "../components/faculty-staff-card/faculty-staff-card";
 @import "../components/faculty-staff-card-set/faculty-staff-card-set";
 @import "../components/faculty-staff-feed-item/faculty-staff-feed-item";
