--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -7,6 +7,7 @@ $tertiary: #7ba3ca;
 $white: #ffffff;
 $off-white: #f5f5f5;
 $off-white2: #f3f3f3;
+$off-white3: #ebebeb;
 $light-grey: #ebebeb;
 $iastate-dark-blue: #003d4c;
 $grey: #4a4a4a;
@@ -18,6 +19,7 @@ $black: #000000;
 $iastate-red: #c8102e;
 $iastate-maroon: #7c2529;
 $iastate-gold: #f1be48;
+$iastate-purple: #ed23ce;
 
 /* Fonts
    ========================================================================== */
