--- a/src/components/pages/_article-pages.scss
+++ b/src/components/pages/_article-pages.scss
@@ -46,12 +46,12 @@
         padding: 0;
       }
       a {
-        color: $iastate-red;
-        text-decoration: none;
+        color: $iastate-maroon;
+        text-decoration: underline;
         font-weight: 600;
         transition: color 0.25s linear;
         &:hover {
-          color: $iastate-maroon;
+          color: $iastate-red;
         }
       }
     }
