Calendar layout fixes

--- a/src/components/featured-events/_featured-events.scss
+++ b/src/components/featured-events/_featured-events.scss
@@ -1,4 +1,7 @@
 .featured-events {
+}
+
+.featured-events__wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,6 +9,38 @@
   @include media-breakpoint-up(lg) {
     flex-direction: row;
     align-items: flex-start;
+  }
+}
+
+.featured-events__header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 100%;
+  margin-bottom: 20px;
+
+  @include media-breakpoint-up(md) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 40px;
+  }
+
+  h2 {
+    @extend %h2-yellow-border;
+
+    @include media-breakpoint-down(md) {
+      &:after {
+        left: calc(50% - 25px);
+      }
+    }
+  }
+
+  .link-tertiary {
+    @include media-breakpoint-up(md) {
+      margin-top: 8px;
+    }
   }
 }
 
@@ -43,6 +78,10 @@
   .iastate22-link-secondary {
     @include media-breakpoint-up(lg) {
       font-size: rem(22);
+    }
+
+    .arrow {
+      bottom: 14px;
     }
   }
 }
