--- a/src/components/pages/event-components.twig
+++ b/src/components/pages/event-components.twig
@@ -6,15 +6,10 @@
 
 {% block content %}
   <div class="outer-pad">
-    <p class="iastate-article__back-btn"><a href="#" class="link-set__link link-tertiary">View All Events<span class="arrow"></span></a></p>
+    <p class="iastate-article__back-btn"><a href="#" class="link-set__link link-tertiary">View All Events</a></p>
     {% include "@stater-article-hero--event-components" with hero %}
-    <div class="paragraph-widget paragraph-widget--text-html">
-      <div class="text-content">
-        <h2>Featured Events</h2>
-      </div>
-    </div>
     <div class="paragraph-widget paragraph-widget--card-set">
-      {% include "@card-set" with card_set_three_links %}
+      {% include "@card-set--title" with card_set_three_links %}
     </div>
     {% include "@upcoming-events" %}
     
