Line break added to link on Events page

--- a/src/components/event-details/_event.scss
+++ b/src/components/event-details/_event.scss
@@ -52,6 +52,7 @@
     [class^="iastate22-link"],
     [class*="iastate22-link"] {
       display: table;
+      word-break: break-word;
     }
 
     [class^="iastate22-link"],
