Created new Grid List component and added to ecosystem Kitchen Sink (https://trello.com/c/5n1ayYzT/31-grid-list)

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -69,6 +69,7 @@
 @import "../components/personal-profile-info-card/personal-profile-info-card";
 @import "../components/privacy-consent/privacy-consent";
 @import "../components/news-item/news-item";
+@import "../components/grid-list/grid-list";
 @import "../components/share/share";
 @import "../components/upcoming-events/upcoming-events";
 @import "../components/faculty-staff-card/faculty-staff-card";
